Add `file_poster`, `file_poster_<<key>>`, `url_background`, `url_background_<<key>>`, `file_background`, `file_background_<<key>>`, `sort_prefix`, `sort_title`, and `name_mapping` as [Collection Variables](https://metamanager.wiki/en/latest/defaults/collection_variables.html).
Add new Separator Color Styles.
Standardized overlay sizes for `- pmm: networks` and `- pmm: streaming`
Rebrand HBO Max to Max.
Add additional studios and networks
Add Heritage Months to [Seasonal Defaults File](https://metamanager.wiki/en/latest/defaults/movie/seasonal.html)

# Bug Fixes
Fixes #1496 Fixes issue with IMDb Collections not building due to HTML structure changes.
Fixes #1445 Fixes FlixPatrol failed to parse error for most users.
Fixes #1379 Fixes a Docstring.
Fixes #1478 Fixes issue with percent sign not appearing on some rating overlays.
Fixes #1490 Fixes incorrect language code for Philippines  in Languages Defaults file.
Fixes #1378 Fixes incorrect default value for starting attribute in "Year" collections.
Fixes #1379 #1380 #1472 Fixes various docs issues and typos
Fixes #1518 `radarr_remove_by_tag` and `sonarr_remove_by_tag` being validated as bool instead of strings. thanks @chazlarson
Fixes #1531 Fixes secrets not being redacted from Run Command in log files
Fixes issue with validating filenames as part of `dimensional_asset_rename`. thanks @chazlarson
Fixes an issue where renamed collections could be incorrectly deleted.
Fixes bug when defining users for `sync_to_users` for Playlists.
Fixes bug where using mdb or metacritic as rating source on Ratings Overlay would not work correctly.
Fixes bug where TMDb Filters using a modifier were ignored.
Fixes bug with `mal_search` when using the `sfw` attribute
Fixes bug where sorting a collection would fail if the collection name had a `,` in it.
Fixes run_end webhooks.

Various other Minor Fixes