@@ -11,13 +11,22 @@ external_templates:
     default:
       style: yellow
     conditionals:
+      final_style:
+        default: yellow
+        conditions:
+          - style: gray
+            value: gray
+          - style: black
+            value: black
+          - style: red
+            value: red
       pmm:
         conditions:
           - file.exists: false
             url.exists: false
             git.exists: false
             repo.exists: false
-            value: ribbon/<<style>>/<<key>>
+            value: ribbon/<<final_style>>/<<key>>
     group: ribbon
     horizontal_offset: 0
     horizontal_align: right
